--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Procrastinator",
-	"version": "1.0.3",
+	"version": "1.1.0",
 	"description": "Helps you stay focused on the web by blocking unnecessary destractions",
 	"icons": {
 		"16": "images/remove_16.png",
@@ -19,6 +19,7 @@
 		"webRequest",
 		"<all_urls>",
 		"webRequestBlocking",
-		"tabs"
+		"tabs",
+		"storage"
 	]
 }
