--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,16 @@
 	"manifest_version": 2,
 	"name": "Procrastinator",
 	"version": "1.1.0",
+
 	"description": "Helps you stay focused on the web by blocking unnecessary destractions",
 	"icons": {
 		"16": "images/remove_16.png",
 		"32": "images/remove_32.png",
 		"48": "images/remove_48.png"
 	},
+
+	"author": "Ben Rowe",
+
 	"browser_action": {
 		"default_icon": "images/remove_16.png",
 		"default_title": "Procrastinator",
